# DevOps-Test

./: CMakeLists.txt  Dockerfile.jenkins  Jankinsfile  conanfile.py  docker-compose.yml  jankinsfile
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
